# isaac_ros_image_segmentation

./: .gitignore  MANUAL_TEST_GUIDE.md  QUICKSTART_BENCHMARK.md  README.md  download_dataset_ngc.sh  run_foxglove_demo.sh  test_sam3_benchmark.sh
isaac_ros_segment_anything3/: CMakeLists.txt  CONTRIBUTING.md  package.xml
isaac_ros_segment_anything3/config/triton_models/sam3_decoder/: config.pbtxt
isaac_ros_segment_anything3/config/triton_models/sam3_text_encoder/: config.pbtxt
isaac_ros_segment_anything3/config/triton_models/sam3_vision_encoder/: config.pbtxt
isaac_ros_segment_anything3/docker/: Dockerfile.pytorch
isaac_ros_segment_anything3/launch/: isaac_ros_segment_anything3.launch.py  isaac_ros_segment_anything3_core.launch.py  isaac_ros_segment_anything3_demo.launch.py
isaac_ros_segment_anything3/scripts/: bench_vision_opts.py  compile_sam3_trt.py  compile_sam3_trt_decoder.py  compile_sam3_trt_ts.py  download_models.py  export_efficient_sam3.py  overlay_node.py  sam3_node.py  set_text_prompt.py  test_esam3_docker.sh  test_pipeline_comparison.py  test_sam3_pytorch.py  test_upstream_esam3.py  video_publisher.py
isaac_ros_segment_anything3/test/: isaac_ros_segment_anything3_pol.py
isaac_ros_segment_anything3_benchmark/: CMakeLists.txt  README.md  package.xml
isaac_ros_segment_anything3_benchmark/config/: test_scenarios.yaml
isaac_ros_segment_anything3_benchmark/results/: esam3_pytorch_r2b_robotarm.json  sam3_pytorch_r2b_robotarm.json
isaac_ros_segment_anything3_benchmark/scripts/: generate_test_rosbag.py  isaac_ros_segment_anything3_graph.py  sam3_monitor_node.py
isaac_ros_segment_anything3_interfaces/: CMakeLists.txt  package.xml
isaac_ros_segment_anything3_interfaces/msg/: Sam3Timing.msg
isaac_ros_segment_anything3_interfaces/srv/: SetTextPrompt.srv
