# SPDX-FileCopyrightText: NVIDIA CORPORATION & AFFILIATES
# Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.22.1)
project(isaac_ros_segment_anything3 LANGUAGES C CXX)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

# Python package
ament_python_install_package(${PROJECT_NAME})

# Install Python scripts
install(PROGRAMS scripts/sam3_node.py DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/download_models.py DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/set_text_prompt.py DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/export_efficient_sam3.py DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/video_publisher.py DESTINATION lib/${PROJECT_NAME})
install(PROGRAMS scripts/overlay_node.py DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
  # The FindPythonInterp and FindPythonLibs modules are removed
  if(POLICY CMP0148)
    cmake_policy(SET CMP0148 OLD)
  endif()

  find_package(launch_testing_ament_cmake REQUIRED)
  add_launch_test(test/isaac_ros_segment_anything3_pol.py TIMEOUT "300")
endif()

# Embed versioning information (requires isaac_ros_common)
find_package(isaac_ros_common QUIET)
if(isaac_ros_common_FOUND)
  ament_index_get_resource(ISAAC_ROS_COMMON_CMAKE_PATH isaac_ros_common_cmake_path isaac_ros_common)
  include("${ISAAC_ROS_COMMON_CMAKE_PATH}/isaac_ros_common-version-info.cmake")
  generate_version_info(${PROJECT_NAME})
endif()

ament_auto_package(INSTALL_TO_SHARE launch config)
